force-app/main/default/objects/Course__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <description>Maximum number of participants allowed for this course.</description>
    <inlineHelpText>Enter the maximum number of students that can enrol in this course.</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>