force-app/main/default/objects/Course__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <description>Unique identifier for the course used for display and reference purposes.</description>
    <inlineHelpText>Enter a unique code for this course (e.g., SF-ADM-2025).</inlineHelpText>
    <label>Course Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>