force-app/main/default/objects/Course__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <description>Category of the course to support filtering and decision logic.</description>
    <inlineHelpText>Select the course category (Technical or Functional).</inlineHelpText>
    <label>Course Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Functional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>