force-app/main/default/objects/Course__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Planned end date of the course used for lifecycle management.</description>
    <inlineHelpText>Enter the planned end date for this course.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>