force-app/main/default/objects/Course__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Planned start date of the course used for scheduling and automation.</description>
    <inlineHelpText>Enter the planned start date for this course.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>