force-app/main/default/objects/Course__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary trainer assigned to deliver this course.</description>
    <inlineHelpText>Select the contact who will deliver this course.</inlineHelpText>
    <label>Trainer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>