force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Code__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Trainer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>